Fix thing where one thing is too small

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,11 @@ body {
   margin-left: 90px;
 }
 
+.thumbnail img {
+    width: 140px;
+    height: 111px;
+}
+
 .gold {
   background: #ffeb9d;
 }
